Wed Apr 27 23:54:46 CEST 2005 (tk)
----------------------------------
  * libclamav/upx.c: add sanity check to pefromupx() (patch by NJH)

Tue Apr 26 19:37:24 CEST 2005 (tk)
----------------------------------
  * libclamav/readdb.c: improve parsing of broken signatures (bug reported by
			Arnaud Jacques <arnaud*clamav.net>)

Tue Apr 26 18:59:16 CEST 2005 (tk)
----------------------------------
  * libclamav/scanners.c: improve error detection in zip code

Thu Apr 21 12:12:29 BST 2005 (njh)
----------------------------------
  * libclamav:		Removed the support for non fast-tracked uuencoded
				messages. All uuencoded messages are now
				handled by the fast track visa system

Wed Apr 20 01:50:36 CEST 2005 (tk)
----------------------------------
  * libclamav/pe.c: Add more machine types (thanks to Christoph)

Tue Apr 19 15:11:19 CEST 2005 (acab)
------------------------------------
  * libclamav/pe.c: Fixed a typo in FSG detection
                  (reported by Didi Rieder <adrieder*sbox.tugraz.at>)

Tue Apr 19 12:30:58 BST 2005 (trog)
-----------------------------------
  * libclamav/unrar: Add copyright notice. Fix metadata ref bug.

Tue Apr 19 10:22:26 BST 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Some Sober.N were getting through, thanks to Christoph
				for pointing this out

Tue Apr 19 01:26:56 CEST 2005 (tk)
----------------------------------
  * libclamav/unrarlib.[ch]: removed

Mon Apr 18 11:55:48 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Fixed a multi-threading problem relating to updating
				the database when in internal mode
			Use HAVE_CTIME_R_[23]

Thu Apr 14 19:39:49 BST 2005 (trog)
-----------------------------------
  * libclamav/scanners.c, libclamav/vba_extract.[ch]:
	Decode and scan OLE objects embedded in MS Office documents.

Thu Apr 14 14:35:37 BST 2005 (trog)
-----------------------------------
  * libclamav/scanners.c: Activate new RAR code.
